crates/carta/tests/snapshots/golden_writer__rtf__table__table-body-head.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
\trowd \trgaph120
\clbrdrb\brdrs\cellx4320\clbrdrb\brdrs\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 h1\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 h2\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx4320\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 group\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 values\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx4320\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 k1\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 v1\par}
\cell}
}
\intbl\row}
{
\trowd \trgaph120
\cellx4320\cellx8640
\trkeep\intbl
{
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 k2\par}
\cell}
{{\pard\intbl \ql \f0 \sa0 \li0 \fi0 v2\par}
\cell}
}
\intbl\row}
{\pard \ql \f0 \sa180 \li0 \fi0 \par}
